<resources>
    <string name="app_name">ZupProcessoSeletivo</string>

    <string name="dialog_name_movie">Please enter the name of the movie.</string>
    <string name="dialog_name_movie_required">The name of the movie is required!</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="genre">Genre:</string>
    <string name="rated">Rated:</string>
    <string name="released">Released:</string>
    <string name="plot">Plot:</string>
    <string name="runtime">Runtime:</string>
    <string name="director">Director:</string>
    <string name="writer">Writer:</string>
    <string name="actors">Actors:</string>
    <string name="country">Country:</string>
    <string name="language">Language:</string>
    <string name="awards">Awards:</string>
    <string name="production">Production:</string>
    <string name="website">Website:</string>
</resources>
